Add cache record file backup for Team reports
Closes issue #257